# jupyter-scheduler-k8s

./: .gitignore  CLAUDE.md  K8S_NATIVE_IMPLEMENTATION.md  Makefile  README.md  Untitled.ipynb  extension.js  package.json  pyproject.toml  test_db_integration.py  test_job_definitions.py  test_query.py  test_visibility_issue.py  tsconfig.json
image/: Dockerfile  main.py  pixi.toml
jupyter_scheduler_k8s/: __init__.py  database_manager.py  executors.py  k8s_orm.py  scheduler.py
local-dev/kind/: cluster.yaml
src/: advanced-options.tsx  index.ts
src/jupyter_scheduler_k8s/: __init__.py  database_manager.py  executors.py  k8s_orm.py
style/: index.js
tests/: data.csv  test_notebook.ipynb  test_with_data.ipynb
