[project]
name = "jupyter-scheduler-k8s"
version = "0.1.0"
description = "Kubernetes backend for jupyter-scheduler - execute notebook jobs in isolated containers"
readme = "README.md"
authors = [
    { name = "Brian E. Granger", email = "ellisonbg@gmail.com" },
    { name = "Andrii Ieroshenko", email = "ieroshenkoa@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jupyter-scheduler>=2.11.0",
    "jupyterlab>=4.4.5",
    "kubernetes>=33.1.0",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
