[project]
name = "jupyter-scheduler-k8s"
dynamic = ["version"]
description = "Kubernetes backend for jupyter-scheduler - execute notebook jobs in isolated containers"
readme = "README.md"
authors = [
    { name = "Brian E. Granger", email = "ellisonbg@gmail.com" },
    { name = "Andrii Ieroshenko", email = "ieroshenkoa@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "jupyter-scheduler>=2.11.0",
    "jupyterlab>=4.4.5",
    "kubernetes>=33.1.0",
    "awscli>=1.27.0",
]

[build-system]
requires = ["hatchling>=1.21.0", "jupyterlab>=4.0.0,<5.0.0", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = ["jupyter_scheduler_k8s/labextension"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter_scheduler_k8s/labextension" = "share/jupyter/labextensions/jupyter-scheduler-k8s"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyter_scheduler_k8s/labextension/static/style.js",
    "jupyter_scheduler_k8s/labextension/package.json",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyter_scheduler_k8s/labextension"
